--- a/gdellapeProject-master/web/WEB-INF/web.xml
+++ b/gdellapeProject-master/web/WEB-INF/web.xml
@@ -106,6 +106,17 @@
     </servlet-mapping>
 
 
+    <servlet>
+        <servlet-name>Lista-Convenzioni</servlet-name>
+        <servlet-class>controller.ListaConvenzioniController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Lista-Convenzioni</servlet-name>
+        <url-pattern>/listaconvenzioni</url-pattern>
+        <url-pattern>/ListaConvenzioni</url-pattern>
+    </servlet-mapping>
+
+
 
 
 
