--- a/gdellapeProject-master/web/WEB-INF/web.xml
+++ b/gdellapeProject-master/web/WEB-INF/web.xml
@@ -117,6 +117,16 @@
     </servlet-mapping>
 
 
+    <servlet>
+        <servlet-name>SchedaAzienda</servlet-name>
+        <servlet-class>controller.SchedaAziendaController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SchedaAzienda</servlet-name>
+        <url-pattern>/schedaazienda</url-pattern>
+        <url-pattern>/SchedaAzienda</url-pattern>
+    </servlet-mapping>
+
 
 
 
