--- a/gdellapeProject-master/web/WEB-INF/web.xml
+++ b/gdellapeProject-master/web/WEB-INF/web.xml
@@ -170,6 +170,16 @@
     </servlet-mapping>
 
 
+</servlet-mapping>
+<servlet>
+<servlet-name>401</servlet-name>
+<servlet-class>controller.errori.Errore401Controller</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>401</servlet-name>
+<url-pattern>/401</url-pattern>
+
+</servlet-mapping>
 
 
 
@@ -192,7 +202,10 @@
 
 
 
-    <!-- Init Servlet -->
+
+
+
+        <!-- Init Servlet -->
     <welcome-file-list>
         <welcome-file>ConnectionFactory</welcome-file>
     </welcome-file-list>
