--- a/gdellapeProject-master/web/WEB-INF/web.xml
+++ b/gdellapeProject-master/web/WEB-INF/web.xml
@@ -215,11 +215,28 @@
 
     </servlet-mapping>
 
+    <error-page>
+        <error-code>401</error-code>
+        <location>/401</location>
+    </error-page>
+    <error-page>
+        <error-code>403</error-code>
+        <location>/403</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/404</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/500</location>
+    </error-page>
+
 
 
     <!-- Init Servlet -->
     <welcome-file-list>
-        <welcome-file>ConnectionFactory</welcome-file>
+        <welcome-file>/home</welcome-file>
     </welcome-file-list>
     <!-- Fine Init Servlet -->
 
