--- a/gdellapeProject-master/web/WEB-INF/web.xml
+++ b/gdellapeProject-master/web/WEB-INF/web.xml
@@ -232,6 +232,16 @@
         <location>/500</location>
     </error-page>
 
+    <error-page>
+        <exception-type>javax.servlet.ServletException</exception-type>
+        <location>/500</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.io.IOException</exception-type>
+        <location>/500</location>
+    </error-page>
+
+
 
 
     <!-- Init Servlet -->
