--- a/gdellapeProject-master/web/WEB-INF/web.xml
+++ b/gdellapeProject-master/web/WEB-INF/web.xml
@@ -34,6 +34,14 @@
     </welcome-file-list>
     <!-- Fine Init Servlet -->
     <!-- filtri -->
+    <!--<filter>-->
+        <!--<filter-name>Utf8</filter-name>-->
+        <!--<filter-class>filter.Utf8</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>Utf8</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
     <filter>
         <filter-name>AuthenticationFilter</filter-name>
         <filter-class>filter.AuthenticationFilter</filter-class>
