BOZZA: Creazione Servlet per la gestione delle Impostazioni Account Azienda e Tirocinante

--- a/gdellapeProject-master/web/WEB-INF/web.xml
+++ b/gdellapeProject-master/web/WEB-INF/web.xml
@@ -178,13 +178,12 @@
 
     </servlet-mapping>
     <servlet>
-        <servlet-name>ImpostazioniAzienda</servlet-name>
-        <servlet-class>controller.adm.ImpostazioniAzienda</servlet-class>
+        <servlet-name>ImpostazioniAccount</servlet-name>
+        <servlet-class>controller.adm.BackEndImpostazioniAccountController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ImpostazioniAzienda</servlet-name>
+        <servlet-name>ImpostazioniAccount</servlet-name>
         <url-pattern>/account/impostazioni</url-pattern>
-
     </servlet-mapping>
 
     <!-- servlet errori-->
