CREAZIONE, BOZZA: Convenzione Controller

--- a/gdellapeProject-master/web/WEB-INF/web.xml
+++ b/gdellapeProject-master/web/WEB-INF/web.xml
@@ -35,12 +35,12 @@
     <!-- Fine Init Servlet -->
     <!-- filtri -->
     <!--<filter>-->
-        <!--<filter-name>Utf8</filter-name>-->
-        <!--<filter-class>filter.Utf8</filter-class>-->
+    <!--<filter-name>Utf8</filter-name>-->
+    <!--<filter-class>filter.Utf8</filter-class>-->
     <!--</filter>-->
     <!--<filter-mapping>-->
-        <!--<filter-name>Utf8</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
+    <!--<filter-name>Utf8</filter-name>-->
+    <!--<url-pattern>/*</url-pattern>-->
     <!--</filter-mapping>-->
     <filter>
         <filter-name>AuthenticationFilter</filter-name>
@@ -85,13 +85,13 @@
 
 
     <!--<servlet>-->
-        <!--<servlet-name>index</servlet-name>-->
-        <!--<servlet-class>controller.adm.AccountController</servlet-class>-->
+    <!--<servlet-name>index</servlet-name>-->
+    <!--<servlet-class>controller.adm.AccountController</servlet-class>-->
     <!--</servlet>-->
     <!--<servlet-mapping>-->
-        <!--<servlet-name>index</servlet-name>-->
-        <!--<url-pattern>/index</url-pattern>-->
-        <!--<url-pattern>/Account</url-pattern>-->
+    <!--<servlet-name>index</servlet-name>-->
+    <!--<url-pattern>/index</url-pattern>-->
+    <!--<url-pattern>/Account</url-pattern>-->
     <!--</servlet-mapping>-->
 
 
@@ -196,6 +196,16 @@
         <servlet-name>BackEndModuliController</servlet-name>
         <url-pattern>/account/moduli</url-pattern>
         <url-pattern>/Account/Moduli</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ConvenzioneController</servlet-name>
+        <servlet-class>controller.adm.Azienda.ConvenzioneController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ConvenzioneController</servlet-name>
+        <url-pattern>/account/moduli/covenzione</url-pattern>
+        <url-pattern>/Account/Moduli/Convenzione</url-pattern>
     </servlet-mapping>
 
 
@@ -447,48 +457,48 @@
         <servlet-name>show-azienda</servlet-name>
         <url-pattern>/show-Azienda</url-pattern>
         <url-pattern>/show-azienda</url-pattern>
-
     </servlet-mapping>
-    <servlet>
-        <servlet-name>modifica-tutore</servlet-name>
-        <servlet-class>controller.adm.Admin.GestioneUtenza.ModificaTutoreController</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>modifica-tutore</servlet-name>
-        <url-pattern>/modifica-tutore</url-pattern>
-        <url-pattern>/modifica-Tutore</url-pattern>
-    </servlet-mapping>
-    <servlet>
-        <servlet-name>modifica-admin</servlet-name>
-        <servlet-class>controller.adm.Admin.GestioneUtenza.ModificaAdmin</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>modifica-admin</servlet-name>
-        <url-pattern>/modifica-Admin</url-pattern>
-        <url-pattern>/modifica-admin</url-pattern>
 
-    </servlet-mapping>
-<servlet>
-<servlet-name>TutteOfferteTr</servlet-name>
-<servlet-class>controller.adm.Admin.GestioneUtenza.OfferteTirocinioController</servlet-class>
-</servlet>
-<servlet-mapping>
-<servlet-name>TutteOfferteTr</servlet-name>
-<url-pattern>/OfferteTirocinioAdmin</url-pattern>
-<url-pattern>/offertetirocinioadmin</url-pattern>
+    <!--<servlet>-->
+        <!--<servlet-name>modifica-tutore</servlet-name>-->
+        <!--<servlet-class>controller.adm.Admin.GestioneUtenza.ModificaTutoreController</servlet-class>-->
+    <!--</servlet>-->
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>modifica-tutore</servlet-name>-->
+        <!--<url-pattern>/modifica-tutore</url-pattern>-->
+        <!--<url-pattern>/modifica-Tutore</url-pattern>-->
+    <!--</servlet-mapping>-->
+    <!---->
+    <!--<servlet>-->
+        <!--<servlet-name>modifica-admin</servlet-name>-->
+        <!--<servlet-class>controller.adm.Admin.GestioneUtenza.ModificaAdmin</servlet-class>-->
+    <!--</servlet>-->
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>modifica-admin</servlet-name>-->
+        <!--<url-pattern>/modifica-Admin</url-pattern>-->
+        <!--<url-pattern>/modifica-admin</url-pattern>-->
+    <!--</servlet-mapping>-->
+    <!---->
+    <!--<servlet>-->
+        <!--<servlet-name>TutteOfferteTr</servlet-name>-->
+        <!--<servlet-class>controller.adm.Admin.GestioneUtenza.OfferteTirocinioController</servlet-class>-->
+    <!--</servlet>-->
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>TutteOfferteTr</servlet-name>-->
+        <!--<url-pattern>/OfferteTirocinioAdmin</url-pattern>-->
+        <!--<url-pattern>/offertetirocinioadmin</url-pattern>-->
+    <!--</servlet-mapping>-->
 
-</servlet-mapping>
+    <!--<servlet>-->
+        <!--<servlet-name>ModificaOffertaAdmin</servlet-name>-->
+        <!--<servlet-class>controller.adm.Admin.GestioneUtenza.ModificaOffertatrController</servlet-class>-->
+    <!--</servlet>-->
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>ModificaOffertaAdmin</servlet-name>-->
+        <!--<url-pattern>/ModificaOfferta</url-pattern>-->
+        <!--<url-pattern>/modificaofferta</url-pattern>-->
+    <!--</servlet-mapping>-->
 
-<servlet>
-<servlet-name>ModificaOffertaAdmin</servlet-name>
-<servlet-class>controller.adm.Admin.GestioneUtenza.ModificaOffertatrController</servlet-class>
-</servlet>
-<servlet-mapping>
-<servlet-name>ModificaOffertaAdmin</servlet-name>
-<url-pattern>/ModificaOfferta</url-pattern>
-<url-pattern>/modificaofferta</url-pattern>
-
-</servlet-mapping>
     <servlet>
         <servlet-name>CreaAdmin</servlet-name>
         <servlet-class>controller.adm.Admin.GestioneUtenza.CreateAdmin</servlet-class>
@@ -500,8 +510,6 @@
 
     </servlet-mapping>
     <!-- end servelt account admin-->
-
-
 
 
     <servlet>
